# vizitka-bot

./: .gitignore  README.md  pyproject.toml  vizitka_bot.db
vizitka_bot/: database.py  draw_info_on_image.py  main.py
vizitka_bot/code/: database.py  draw_info_on_image.py  main.py
